# waypad-deamon

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
config/: waypad-daemon.json
docs/: ARCHITECTURE.md  PROTOCOL.md  TROUBLESHOOTING.md
packaging/: PKGBUILD
src/: capability.rs  config.rs  crypto.rs  discovery.rs  gamepad.rs  input.rs  lib.rs  main.rs  platform.rs  protocol.rs  screen.rs  server.rs  state.rs  system_control.rs
systemd/: waypad-daemon.service
