[package]
name = "waypad-daemon"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "NOASSERTION"
description = "Secure Wayland-focused remote control daemon for Waypad"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
futures-util = "0.3.32"
hex = "0.4.3"
libc = "0.2.186"
ring = "0.17.14"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
socket2 = "0.6.1"
thiserror = "2.0.18"
tokio = { version = "1.51.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
zbus = { version = "5.14.0", default-features = false, features = ["tokio"] }
zvariant = "5.10.0"
